--- a/src/BookingSystem/client/app/app.component.html
+++ b/src/BookingSystem/client/app/app.component.html
@@ -1,4 +1,9 @@
-﻿<h1>Application says what?</h1>
-<ul *ngFor="let value of apiValues">
-  <li>{{value}}</li>
-</ul>
+﻿<!--<a routerLink="/info" routerLinkActive="active">INFO</a>-->
+
+<div class="container-fluid">
+  <bs-header></bs-header>
+
+  <router-outlet></router-outlet>
+
+  <bs-footer></bs-footer>
+</div>
