--- a/src/BookingSystem/client/app/header.component.html
+++ b/src/BookingSystem/client/app/header.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <bs-room-title></bs-room-title>
+      <bs-room-name></bs-room-name>
     </div>
 
     <div class="col-3">
