Simplify InfoPage component layout; remove unnecessary components

--- a/src/BookingSystem/client/app/current-time.component.html
+++ b/src/BookingSystem/client/app/current-time.component.html
@@ -1,1 +1,3 @@
-<ng-container>{{now | async | date: 'mediumTime'}}</ng-container>
+<ng-container>
+  {{now | async | date: 'mediumTime'}}
+</ng-container>
