--- a/src/BookingSystem/client/app/app.component.html
+++ b/src/BookingSystem/client/app/app.component.html
@@ -1,9 +1,3 @@
-﻿<!--<a routerLink="/info" routerLinkActive="active">INFO</a>-->
-
-<div class="container-fluid">
-  <bs-header></bs-header>
-
+﻿<div class="container-fluid">
   <router-outlet></router-outlet>
-
-  <bs-footer></bs-footer>
 </div>
