--- a/src/BookingSystem/client/app/info-page.component.html
+++ b/src/BookingSystem/client/app/info-page.component.html
@@ -1,13 +1,17 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <bs-room-status></bs-room-status>
+<div class="container bg-faded">
+  <div class="row justify-content-end">
+    <div class="col-3 text-right">
+      <bs-current-time></bs-current-time>
     </div>
   </div>
 
-  <div class="row">
-    <div class="col">
-      <bs-next-meeting-info></bs-next-meeting-info>
+  <div class="bg-success" *ngFor="let room of (meetingRooms | async)">
+    <bs-room-info [room]="room"></bs-room-info>
+  </div>
+
+  <div class="row justify-content-center">
+    <div class="col-3 text-center">
+      (COMPANY LOGO)
     </div>
   </div>
 </div>
