Update property naming to follow rest of the project

--- a/src/BookingSystem/client/app/components/info-page/info-page.component.html
+++ b/src/BookingSystem/client/app/components/info-page/info-page.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
 
-  <div class="bg-success" *ngFor="let room of (meetingRooms | async)">
+  <div class="bg-success" *ngFor="let room of (meetingRoomsObs | async)">
     <bs-room-info [room]="room"></bs-room-info>
   </div>
 
