Add ServerConnectionMonitor component (WIP)

--- a/src/BookingSystem/client/app/app.component.html
+++ b/src/BookingSystem/client/app/app.component.html
@@ -1,3 +1,9 @@
 ﻿<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col text-center">
+      <bs-server-connection-monitor></bs-server-connection-monitor>
+    </div>
+  </div>
+
   <router-outlet></router-outlet>
 </div>
