Start implementing RoomStatus and NextMeetingInfo components (WIP)

--- a/src/BookingSystem/client/app/components/next-meeting-info/next-meeting-info.component.html
+++ b/src/BookingSystem/client/app/components/next-meeting-info/next-meeting-info.component.html
@@ -1,3 +1,5 @@
-<ng-container>
-  (NEXT MEETING INFO FOR ROOM {{room.id}} HERE)
+<ng-container *ngIf="hasNextMeeting()">
+  <p>Next:</p>
+  <p>{{room.nextMeeting().user}}</p>
+  <p>{{room.nextMeeting().description}}</p>
 </ng-container>
