--- a/src/BookingSystem/client/app/components/info-page/info-page.component.html
+++ b/src/BookingSystem/client/app/components/info-page/info-page.component.html
@@ -11,7 +11,7 @@
 
   <div class="row justify-content-center">
     <div class="col-3 text-center">
-      (COMPANY LOGO)
+      (COMPANY LOGO HERE)
     </div>
   </div>
 </div>
