--- a/src/BookingSystem/client/app/components/room-status/room-status.component.html
+++ b/src/BookingSystem/client/app/components/room-status/room-status.component.html
@@ -1,3 +1,4 @@
 <ng-container>
-  (ROOM {{room.id}} STATUS HERE)
+  <p>{{status()}}</p>
+  <p *ngIf="room.isOccupiedNow()">(REMAINING TIME HERE)</p>
 </ng-container>
