Implement RoomStatus and NextMeetingInfo components (WIP)

--- a/src/BookingSystem/client/app/components/next-meeting-info/next-meeting-info.component.html
+++ b/src/BookingSystem/client/app/components/next-meeting-info/next-meeting-info.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="hasNextMeeting()">
+<ng-container *ngIf="hasNextMeeting(room)">
   <p>Next:</p>
-  <p>{{room.nextMeeting().user}}</p>
-  <p>{{room.nextMeeting().description}}</p>
+  <p>{{nextMeeting(room).user}}</p>
+  <p>{{nextMeeting(room).description}}</p>
 </ng-container>
