--- a/src/BookingSystem/client/app/components/meeting-info/meeting-info.component.html
+++ b/src/BookingSystem/client/app/components/meeting-info/meeting-info.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <p>{{meeting.user}}</p>
+  <p class="mat-title mb-0">{{meeting.user}}</p>
 
-  <p>{{meeting.description}}</p>
+  <p class="mat-title mb-0">{{meeting.description}}</p>
 </ng-container>
