--- a/src/BookingSystem/client/app/components/room-info/room-info.component.html
+++ b/src/BookingSystem/client/app/components/room-info/room-info.component.html
@@ -1,22 +1,28 @@
 <ng-container>
-  <div class="row">
-    <div class="col">
-      <bs-room-name [roomName]="room?.name"></bs-room-name>
+  <div [ngClass]="{'bs-room-occupied': isOccupiedNow(room), 'bs-room-available': !isOccupiedNow(room)}"
+       class="container-fluid">
+    <div class="row">
+      <div class="col">
+        <p class="mat-title mb-0">
+          <bs-room-name [roomName]="room?.name"></bs-room-name>
+        </p>
+      </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col">
-      <bs-room-status [room]="room"></bs-room-status>
+    <div class="row">
+      <div class="col">
+        <bs-room-status [room]="room"></bs-room-status>
+      </div>
     </div>
-  </div>
 
-  <div *ngIf="hasNextMeeting(room)"
-       class="row">
-    <div class="col">
-      <p class="text-uppercase">Next</p>
+    <div *ngIf="hasNextMeeting(room)"
+         class="row">
+      <div class="col">
+        <p class="text-uppercase mat-title mb-0">Next</p>
 
-      <bs-meeting-info [meeting]="nextMeeting(room)"></bs-meeting-info>
+        <bs-meeting-info [meeting]="nextMeeting(room)"
+                         class="mat-title"></bs-meeting-info>
+      </div>
     </div>
   </div>
 </ng-container>
