--- a/src/BookingSystem/client/app/app.component.html
+++ b/src/BookingSystem/client/app/app.component.html
@@ -1,7 +1,9 @@
-﻿<div class="container-fluid">
+﻿<div class="container-fluid p-0 mat-app-background bs-theme">
   <div class="row justify-content-center">
-    <div class="col text-center">
-      <bs-server-connection-monitor></bs-server-connection-monitor>
+    <div class="col col-auto">
+      <div class="container-fluid text-center">
+        <bs-server-connection-monitor></bs-server-connection-monitor>
+      </div>
     </div>
   </div>
 
