--- a/src/BookingSystem/client/app/app.component.html
+++ b/src/BookingSystem/client/app/app.component.html
@@ -1,5 +1,5 @@
-﻿<div class="container-fluid p-0 mat-app-background bs-theme">
-  <div class="row justify-content-center">
+﻿<div class="container-fluid p-0 w-100 mat-app-background bs-theme">
+  <div class="row mx-0 justify-content-center">
     <div class="col col-auto">
       <div class="container-fluid text-center">
         <bs-server-connection-monitor></bs-server-connection-monitor>
