--- a/src/BookingSystem/client/app/components/info-page/info-page.component.html
+++ b/src/BookingSystem/client/app/components/info-page/info-page.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid p-0 bs-h-100v_ bs-w-100v_">
-  <div class="row justify-content-end">
+<div class="container-fluid p-0 w-100 bs-h-100v_ bs-w-100v_">
+  <div class="row mx-0 justify-content-end">
     <div class="col col-auto mat-subheading-2 mb-0">
       <div class="container-fluid">
         <bs-current-time></bs-current-time>
@@ -9,7 +9,7 @@
 
   <ng-container *ngIf="meetingRoomsObs | async as meetingRooms; else notMeetingRooms">
     <div *ngFor="let room of meetingRooms"
-         class="row">
+         class="row mx-0">
       <div class="col">
         <bs-room-info [room]="room"></bs-room-info>
       </div>
@@ -17,7 +17,7 @@
   </ng-container>
 
   <ng-template #notMeetingRooms>
-    <div class="row justify-content-center">
+    <div class="row mx-0 justify-content-center">
       <div class="col col-auto">
         <div class="container-fluid">
           <md-spinner></md-spinner>
@@ -26,7 +26,7 @@
     </div>
   </ng-template>
 
-  <div class="row justify-content-center">
+  <div class="row mx-0 justify-content-center">
     <div class="col col-auto mat-subheading-2 mb-0">
       <div class="container-fluid">
         (COMPANY LOGO HERE)
