--- a/src/BookingSystem/client/app/components/info-page/info-page.component.html
+++ b/src/BookingSystem/client/app/components/info-page/info-page.component.html
@@ -1,16 +1,8 @@
-<div class="container-fluid p-0 w-100 bs-h-100v_ bs-w-100v_">
-  <div class="row mx-0 justify-content-end">
-    <div class="col col-auto mat-subheading-2 mb-0">
-      <div class="container-fluid">
-        <bs-current-time></bs-current-time>
-      </div>
-    </div>
-  </div>
-
+<div class="container-fluid p-0 d-flex flex-column justify-content-between">
   <ng-container *ngIf="meetingRoomsObs | async as meetingRooms; else notMeetingRooms">
     <div *ngFor="let room of meetingRooms"
          class="row mx-0">
-      <div class="col">
+      <div class="col px-0">
         <bs-room-info [room]="room"></bs-room-info>
       </div>
     </div>
@@ -21,16 +13,9 @@
       <div class="col col-auto">
         <div class="container-fluid">
           <md-spinner></md-spinner>
+          <!--<md-progress-spinner value="50"></md-progress-spinner>-->
         </div>
       </div>
     </div>
   </ng-template>
-
-  <div class="row mx-0 justify-content-center">
-    <div class="col col-auto mat-subheading-2 mb-0">
-      <div class="container-fluid">
-        (COMPANY LOGO HERE)
-      </div>
-    </div>
-  </div>
 </div>
