--- a/src/BookingSystem/client/styles.css
+++ b/src/BookingSystem/client/styles.css
@@ -15,3 +15,11 @@
 .bs-w-100v {
   width: 100vw !important;
 }
+
+.bs-mh-100v {
+  min-height: 100vh !important;
+}
+
+.bs-mw-100v {
+  min-width: 100vw !important;
+}
