Change primary and accent colors to orange

--- a/src/BookingSystem/client/bs-theme.scss
+++ b/src/BookingSystem/client/bs-theme.scss
@@ -2,11 +2,11 @@
 
 @include mat-core();
 
-$bs-primary: mat-palette($mat-indigo);
-$bs-accent: mat-palette($mat-pink, A200, A100, A400);
+$bs-primary: mat-palette($mat-orange);
+$bs-accent: mat-palette($mat-orange, A200, A100, A400);
 $bs-warn: mat-palette($mat-red);
 
-$bs-theme: mat-dark-theme($bs-primary, $bs-accent, $bs-warn);
+$bs-theme: mat-light-theme($bs-primary, $bs-accent, $bs-warn);
 
 @include angular-material-theme($bs-theme);
 
