--- a/src/BookingSystem/client/app/components/room-info/room-info.component.html
+++ b/src/BookingSystem/client/app/components/room-info/room-info.component.html
@@ -1,11 +1,14 @@
 <ng-container>
   <div [ngClass]="{'bs-room-occupied': isOccupiedNow(room), 'bs-room-available': !isOccupiedNow(room)}"
-       class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <p class="mat-title mb-0">
-          <bs-room-name [roomName]="room?.name"></bs-room-name>
-        </p>
+       class="container-fluid h-100 d-flex flex-column justify-content-center">
+
+    <div style="position: absolute; top: 0">
+      <div class="row">
+        <div class="col">
+          <p class="mat-title mb-0">
+            <bs-room-name [roomName]="room?.name"></bs-room-name>
+          </p>
+        </div>
       </div>
     </div>
 
