Change positioning of next meeting info to follow mockup

--- a/src/BookingSystem/client/app/components/room-info/room-info.component.html
+++ b/src/BookingSystem/client/app/components/room-info/room-info.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row mb-auto">
       <div class="col">
         <bs-room-status [room]="room"></bs-room-status>
       </div>
