Do not use inline styles in App component

--- a/src/BookingSystem/client/app/app.component.html
+++ b/src/BookingSystem/client/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
 
-  <div class="w-100" style="position: absolute; top: 0; z-index: 1">
+  <div class="w-100 bs-pat">
     <div class="row mx-0 justify-content-end mb-auto">
       <div class="col col-auto mat-title mb-0">
         <div class="container-fluid">
@@ -20,7 +20,7 @@
 
   <router-outlet></router-outlet>
 
-  <div class="w-100" style="position: absolute; bottom: 0; z-index: 1">
+  <div class="w-100 bs-pab">
     <div class="row mx-0 justify-content-center mt-auto">
       <div class="col col-auto mat-title mb-0">
         <div class="container-fluid">
