--- a/src/BookingSystem/client/styles.css
+++ b/src/BookingSystem/client/styles.css
@@ -23,3 +23,15 @@
 .bs-mw-100v {
   min-width: 100vw !important;
 }
+
+.bs-pat {
+  position: absolute;
+  top: 0;
+  z-index: 1
+}
+
+.bs-pab {
+  position: absolute;
+  bottom: 0;
+  z-index: 1
+}
