Make text white in RoomInfo component

--- a/src/BookingSystem/client/app/components/room-info/room-info.component.html
+++ b/src/BookingSystem/client/app/components/room-info/room-info.component.html
@@ -1,6 +1,6 @@
 <ng-container>
   <div [ngClass]="{'bs-room-occupied': isOccupiedNow(room), 'bs-room-available': !isOccupiedNow(room)}"
-       class="container-fluid h-100 d-flex flex-column justify-content-center">
+       class="container-fluid h-100 d-flex flex-column justify-content-center bs-room-info">
 
     <div class="row mb-auto">
       <div class="col">
