Enlarge `Next' text in RoomInfo

--- a/src/BookingSystem/client/app/components/room-info/room-info.component.html
+++ b/src/BookingSystem/client/app/components/room-info/room-info.component.html
@@ -19,7 +19,7 @@
     <div *ngIf="hasNextMeeting(room)"
          class="row mb-auto">
       <div class="col">
-        <p class="text-uppercase mat-title mb-0">Next</p>
+        <p class="text-uppercase mat-headline mb-0">Next</p>
 
         <bs-meeting-info [meeting]="nextMeeting(room)"
                          class="mat-title"></bs-meeting-info>
