Use MdDialog to show server error notification

--- a/src/BookingSystem/client/app/app.component.html
+++ b/src/BookingSystem/client/app/app.component.html
@@ -1,12 +1,14 @@
 ﻿<div class="container-fluid p-0 bs-h-100v bs-theme">
   <!--TODO: [2;1] Show it using `MdDialog'-->
-  <div class="row mx-0 justify-content-center">
-    <div class="col col-auto">
-      <div class="container-fluid text-center">
-        <bs-server-connection-monitor></bs-server-connection-monitor>
-      </div>
-    </div>
-  </div>
+  <!--<div class="row mx-0 justify-content-center">-->
+    <!--<div class="col col-auto">-->
+      <!--<div class="container-fluid text-center">-->
+        <!--<bs-server-connection-monitor></bs-server-connection-monitor>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+
+  <bs-server-connection-monitor></bs-server-connection-monitor>
 
   <div class="w-100 bs-pat">
     <div class="row mx-0 justify-content-end mb-auto">
