--- a/src/BookingSystem/client/app/components/settings/settings-page.component.html
+++ b/src/BookingSystem/client/app/components/settings/settings-page.component.html
@@ -1,19 +1,27 @@
 <div class="container-fluid p-0 h-100 d-flex justify-content-center align-items-center">
     <!--TODO: [2;1] Use slider here-->
-    <ng-container *ngIf="meetingRoomsObs | async as meetingRooms; else notMeetingRooms">
-        <div *ngFor="let room of meetingRooms"
-             class="row mx-0 w-100 h-100">
+        <div class="row mx-0 w-100 h-100">
             <div class="col px-0">
-                <bs-settings-info [room]="room"></bs-settings-info>
+                <input (keyup)="onKey($event)">
+                <p>{{values}}</p>
             </div>
         </div>
-    </ng-container>
+    <div class="container-fluid">
+    <div class="row mx-0 w-100 h-100">
+        <div class="span4">
+            <input (keyup)="onKey($event)">
+            <p>{{values}}</p>
+        </div>
+    </div>
+</div>
 
     <ng-template #notMeetingRooms>
         <div class="row mx-0">
             <div class="col col-auto">
                 <div class="container-fluid">
                     <md-spinner></md-spinner>
+                    <input (keyup)="onKey($event)">
+                    <p>{{values}}</p>
                     <!--<md-progress-spinner value="50"></md-progress-spinner>-->
                 </div>
             </div>
