settings-page design start

--- a/src/BookingSystem/client/app/components/settings-info/settings-info.component.html
+++ b/src/BookingSystem/client/app/components/settings-info/settings-info.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="row mb-auto">
-      <div class="col">
+      <div class="col-md-2 col-md-offset-5">
         <input (keyup)="onKey($event)">
         <p>{{values}}</p>
       </div>
