work with new theme of settings

--- a/src/BookingSystem/client/app/components/settings/settings-page.component.css
+++ b/src/BookingSystem/client/app/components/settings/settings-page.component.css
@@ -2,18 +2,13 @@
     width: 500px;
     margin-right: 100px;
 }
-input::-webkit-input-placeholder {
-    color: red !important;
+
+
+.settings{
+    background-color: white;
 }
 
-input:-moz-placeholder { /* Firefox 18- */
-    color: red !important;
-}
 
-input::-moz-placeholder {  /* Firefox 19+ */
-    color: red !important;
-}
-
-input:-ms-input-placeholder {
-    color: red !important;
+input:-moz-placeholder {
+    color:    green !important;
 }
