--- a/src/BookingSystem/client/app/components/settings/settings-page.component.html
+++ b/src/BookingSystem/client/app/components/settings/settings-page.component.html
@@ -1,15 +1,8 @@
-<div class="container-fluid  p-0 h-100 d-flex justify-content-center align-items-center">
-    <!--TODO: [2;1] Use slider here-->
-        <div class="row mx-0 w-100 h-100">
-            <div class="col px-0">
-                <input (keyup)="onKey($event)">
-                <p>{{values}}</p>
-            </div>
-        </div>
+<div class="container-fluid settings p-0 h-100 d-flex justify-content-center align-items-center">
 
-    <md-input-container class="container-address">
-        <input mdInput placeholder="Favorite food" value="Sushi">
-    </md-input-container>
+        <md-input-container class="container-address">
+            <input mdInput placeholder="Favorite food" value="Sushi">
+        </md-input-container>
 
     <ng-template #notMeetingRooms>
 
