--- a/src/BookingSystem/client/app/components/settings/settings-page.component.css
+++ b/src/BookingSystem/client/app/components/settings/settings-page.component.css
@@ -19,7 +19,8 @@
     font:small-caption;font-size:16px;
 }
 .col-buttons{
-    margin-left: 200px;
+    margin-top: 100px;
+    margin-left: 100px;
 }
 
 .btn-save{
