--- a/src/BookingSystem/client/app/components/settings/settings-page.component.html
+++ b/src/BookingSystem/client/app/components/settings/settings-page.component.html
@@ -39,15 +39,13 @@
             </td>
         </tr></table>
 
-    <div class="container-fluid buttons-container">
-    <div class="row mb-auto ">
-    <div class="col col-7 col-buttons">
+
+        <div class="form-group col-buttons">
         <button md-raised-button class="btn-save">Save</button>
         <button md-raised-button class="btn-add">Add room</button>
         <!--<bs-settings-buttons [roomName]="room?.name"></bs-settings-buttons>-->
     </div>
-</div>
-    </div>
+
     </form>
 </div>
 
